# chatterBox

./: .gitignore  CLAUDE.md  README.md  arthur.md  build.sh  pyproject.toml
Formula/: chatterbot.rb  chatterbox.rb
chatterbot/: cleanup.py
whisperflow/: __init__.py  __main__.py  audio.py  cleanup.py  hotkey.py  inject.py
