[project]
name = "whisperflow"
version = "0.1.0"
description = "Local Wispr Flow clone: hold-key push-to-talk dictation with on-device Parakeet transcription"
requires-python = ">=3.10"
dependencies = [
    "parakeet-mlx>=0.3",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "pynput>=1.7",
    # keep the resolver off numba 0.53 (pulled in via parakeet-mlx -> librosa)
    "numba>=0.60",
]

[project.scripts]
whisperflow = "whisperflow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whisperflow"]
